--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,7 @@ body header div.divHeader nav.searcher {
 body header div.divHeader nav.searcher div {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 body header div.divHeader nav.searcher div form {
   align-items: baseline;
@@ -372,7 +373,7 @@ body header nav.navbar div div.collapse div.dropdown ul.dropdown-menu li.xeroxLi
 body header nav.navbar div div.collapse div.ajusteJs {
   margin-left: 100px;
 }
-body header nav.navbar div div.collapse ul.navbar-nav {
+body header nav.navbar div div.collapse ul.ulNav {
   font-family: "Ubuntu", sans-serif;
   font-weight: 600;
   font-style: normal;
@@ -383,7 +384,7 @@ body header nav.navbar div div.collapse ul.navbar-nav {
   align-items: center;
   flex-direction: row;
 }
-body header nav.navbar div div.collapse ul.navbar-nav li.xeroxLista {
+body header nav.navbar div div.collapse ul.ulNav li.xeroxLista {
   display: grid;
   list-style: none;
   padding: 10px 0px 10px 0px;
@@ -391,10 +392,10 @@ body header nav.navbar div div.collapse ul.navbar-nav li.xeroxLista {
   letter-spacing: 1px;
   width: 155px;
 }
-body header nav.navbar div div.collapse ul.navbar-nav li.xeroxLista a {
+body header nav.navbar div div.collapse ul.ulNav li.xeroxLista a {
   font-size: 20px;
 }
-body header nav.navbar div div.collapse ul.navbar-nav li.xeroxLista a:hover {
+body header nav.navbar div div.collapse ul.ulNav li.xeroxLista a:hover {
   transition-property: all;
   transition-duration: 95ms;
   transform: scale(1.3);
@@ -403,12 +404,29 @@ body header nav.navbar div div.collapse button.btnShop {
   border-radius: 20px;
   margin-left: 50px;
 }
-body header nav.navbar div div.collapse div {
-  z-index: 1;
-}
-body header nav.navbar div div.collapse div div.carritoUl ul {
+body header nav.navbar div div.collapse div div.carritoUl ul.ulJs {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+body header nav.navbar div div.collapse div div.carritoUl ul.ulJs .jsImg {
+  height: 220px;
+  width: 175px;
+  margin-top: 30px;
+}
+body header nav.navbar div div.collapse div div.carritoUl ul.ulJs div.jsDiv {
+  display: flex;
+  flex-direction: column;
+}
+body header nav.navbar div div.collapse div div.carritoUl ul.ulJs div.jsDiv div {
+  display: flex;
+  flex-direction: column;
+}
+body header nav.navbar div div.collapse div div.carritoUl ul.ulJs div.jsDiv div a {
+  font-size: 20px;
+}
+body header nav.navbar div div.collapse div div.carritoUl ul.ulJs button {
+  height: 40px;
 }
 body header nav.navbar div div.collapsing div.dropdown button.btn {
   background-color: rgb(91, 17, 141);
@@ -461,7 +479,7 @@ body main section.sectionMain nav {
   margin-bottom: 10px;
 }
 body main section.sectionMain nav ol.breadcrumb {
-  margin: 27px 0px 0px 20px;
+  margin: 45px 0px 0px 20px;
 }
 body main section.sectionMain nav ol.breadcrumb li {
   text-decoration: none;
@@ -595,6 +613,21 @@ a {
   margin-top: 30px;
 }
 
+.textShop {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.textShop .btnConfirm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hide {
+  display: none;
+}
+
 @media screen and (min-width: 0px) and (max-width: 1535px) {
   body main div.contactoDiv form fieldset {
     margin: 30px 0px 0px 200px;
@@ -707,7 +740,7 @@ a {
   }
 }
 @media screen and (min-width: 910px) {
-  body header nav.navbar div button.navbar-toggler {
+  body header nav.navbar div button.btnTog {
     display: none;
   }
   body header nav.navbar div div.divHeader nav.searcher div div.caja {
